--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "author": "Maikel van de Lisdonk",
   "license": "MIT",
   "dependencies": {
+    "@devhelpr/expressionrunner": "^0.1.2",
     "@devhelpr/flowrunner": "0.9.4",
     "@types/jexl": "^2.2.0",
-    "jexl": "2.2.2",
     "promise": "^8.0.3"
   },
   "devDependencies": {
