--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Maikel van de Lisdonk",
   "license": "MIT",
   "dependencies": {
-    "@devhelpr/expressionrunner": "^0.1.2",
+    "@devhelpr/expressionrunner": "0.1.3",
     "@devhelpr/flowrunner": "0.9.4",
     "@types/jexl": "^2.2.0",
     "promise": "^8.0.3"
