Update expressionrunner and flowrunner packages

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "author": "Maikel van de Lisdonk",
   "license": "MIT",
   "dependencies": {
-    "@devhelpr/expressionrunner": "0.1.4",
-    "@devhelpr/flowrunner": "0.9.4",
+    "@devhelpr/expressionrunner": "0.1.6",
+    "@devhelpr/flowrunner": "^0.10.9",
     "@types/jexl": "^2.2.0",
     "promise": "^8.0.3"
   },
